<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Limara Péksége</string>
    <string name="limara">Limara Péksége</string>
    <string name="loafImage">Vekni készítéséhez képek</string>
    <string name="imageString">Kezdő kép</string>

    <string-array name="mainPageMenus">
        <item>Receptek online böngészése</item>
        <item>Elmentett receptek</item>
    </string-array>

    <string name="categories_download">Kategóriák letöltése</string>
    <string name="recipes_download">Receptek letöltése</string>
    <string name="load_recipe">Recept betöltése</string>
    <string name="recipe_save">Recept mentése</string>
    <string name="note_pad_saveButton">NotePadSaveButton</string>
    <string name="note_pad_deleteButton">NotePadDeleteButton</string>

    <string name="wifi_connected_dialog_content">WiFi kapcsolatot észleltem és az elsődleges beállítások még nem történtek meg. A beállítások szükségesek az alkalmazás gyors és zavartalan működéshez, elvégezzem ezeket most? FIGYELEM: a műveletsorozat akár több másodercet is igénybe vehet! </string>
	<string name="app_id">535320333226754</string>
    <string name="yes">Igen</string>
    <string name="no">Ne</string>
    <string name="not_now">Most nem</string>
    <string name="close">Bezár</string>
	<string name="prepare_settings">Beállítások elvégzése</string>
	<string name="refresh_recipes">Receptek frissítése</string>
    <string name="loaf_making_step"> / 9. lépés</string>

	<!-- Toast messages -->
    <string name="noSaved">Nincs mentett recept!</string>
    <string name="no_connection">Nincs internet kapcsolat</string>
    <string name="no_new_recipes">Nincs új recept</string>
    <string name="share_cancelled">Megosztás megszakítva</string>
    <string name="share_error">Hiba történt megosztás közben</string>
    <string name="note_saved">Jegyzet elmentve</string>
    <string name="common_error">Hiba történt, próbálja újra!</string>
    <string name="note_deleted">Jegyzet törölve!</string>
    <string name="update_finished">Frissítés befejezve</string>

	<!-- Menu strings -->

    <string name="menu_save">Mentés</string>
    <string name="menu_delete">Törlés</string>
    <string name="menu_favorite">Kedvencek</string>
    <string name="menu_note">Jegyzet</string>
    <string name="menu_refresh">Frissítés</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Megosztás!</string>
    <string name="menu_about">Névjegy</string>
    <string name="menu_reading_option">Olvasó mód</string>

    <!-- Activity titles -->

    <string name="title_activity_main_page">Limara Péksége</string>
    <string name="title_activity_fresh_news">Friss bejegyzések</string>
    <string name="title_activity_recipe_search">Recept keresése</string>
    <string name="title_activity_recipe_category">Kategóriák</string>
    <string name="title_activity_recipe_list">RecipeList</string>
    <string name="title_activity_recipe_page">RecipePage</string>
    <string name="title_activity_saved_recipes">Elmentett receptek</string>
    <string name="title_activity_loaf_making_tutorial">Vekni formázásáról</string>
    <string name="title_activity_note_pad">NotePad</string>
    <string name="title_saved_recipes">Lementett receptekt</string>
    <string name="title_favorite_recipes">Kedvenc receptek</string>


    <string-array name="nav_drawer_items">
        <item >Kezdőlap</item>
        <item >Recept keresése</item>
        <item >Kategóriák</item>
    </string-array>

    <string name="nav_drawer_item_kezdolap">Kezdőlap</string>
    <string name="nav_drawer_item_about">Kapcsolat</string>

    <!-- Image descriptions -->

    <string name="main_page_icon_descp">MainPageIcon</string>

    <!--  new recipes dialog box -->

    <string name="new_recipes_dialog_title">Receptek frissítése</string>
    <string name="new_recipes_dialog_message">Új receptek érhetők el</string>

    <!-- about dialog box -->

    <string name="about_text">Copyright Karajkó Gábor \nKészítette: Karajkó Gábor \nBlog-tulajdonos: Tóthné Libor Mária \nweb: www.limarapeksege.hu \ne-mail: limara.peksege.app@gmail.com</string>
    <string name="about_title">Névjegy</string>

    <!-- delete dialog box -->

    <string name="confirm_delete">Biztosan töröljük ?</string>
    <string name="delete_title"> törlése</string>

    <!-- prepare recipes dialog box -->
    <string name="prepare_recipes">Receptek előkészítése</string>
    <string name="title_activity_base">BaseActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

    <string name="hello_world">Hello world!</string>

    <!-- events-->
    <string name="analytics_choose_main_menu">Menü elem választás</string>
    <string name="analytics_fresh_news">Friss hírek betöltése</string>

    <string name="analytics_open_nav_drawer">Nav drawer kinyit</string>
    <string name="analytics_slide_nav_drawer">Nav drawer kicsúsztat</string>
    <string name="analytics_close_nav_drawer">Nav drawer bezár</string>
    <string name="analytics_nav_drawer_search">Nav drawer bezár</string>
    <string name="analytics_nav_drawer_main_menu">Nav drawer bezár</string>
    <string name="analytics_about">Kapcsolat megnyitása</string>

    <string name="analytics_navigate_from_search">Kereső használata</string>

    <string name="analytics_note_saved">Jegyzet mentése</string>
    <string name="analytics_note_deleted">Jegyzet törlése</string>
    <string name="analytics_note_open">Jegyzet megnyitása</string>

    <string name="analytics_open_recipe">Recept megnyitása</string>
    <string name="analytics_open_saved_recipe">Lementett recept megnyitása</string>
    <string name="analytics_open_favorite_recipe">Kedvenc recept megnyitása</string>
    <string name="analytics_save_recipe">Recept mentése</string>
    <string name="analytics_delete_recipe">Recept törlése</string>
    <string name="analytics_favorite_recipe">Recept kedvencekbe mentése</string>
    <string name="analytics_move_recipte_to_favorite">Recept kedvencekbe mozgatása</string>

    <string name="analytics_open_recipe_category">Kategóra megnyitása</string>

    <string name="analytics_reading_mode_enabled">Olvasó mód be</string>
    <string name="analytics_reading_mode_disabled">Olvasó mód ki</string>

    <string name="analytics_use_of_search_bar">Kereső sáv használata</string>
    <!-- screens -->
    <string name="analytics_screen_main_page_screen">Főoldal</string>
    <string name="analytics_screen_search_page">Keresés oldal</string>
    <string name="analytics_screen_saved_recipes">Lementett receptek</string>
    <string name="analytics_screen_favorite_recipes">Kedvenc receptek</string>
    <string name="analytics_screen_bread_shaping">Kenyér formázása</string>
    <string name="analytics_screen_recipe_list">Recept Lista</string>
    <string name="analytics_screen_category_list">Kategória Lista</string>
    <string name="analytics_screen_note">Jegyzet nézet</string>
    <string name="analytics_screen_recipe">Recept nézet</string>

    <!-- analytics categories-->
    <string name="analytics_category_recipe">Recept</string>
    <string name="analytics_category_recipe_list">Recept lista</string>
    <string name="analytics_category_recipe_category">Kategória</string>
    <string name="analytics_category_main_menu_item">Főmenüpont</string>
    <string name="analytics_category_note">Jegyzet</string>
    <string name="analytics_category_facebook">Facebook</string>
    <string name="analytics_category_choose_nav_drawer">Navdrawer menü elem</string>
    <string name="drawerListItemImageDescription">Drawer list item image</string>


</resources>