<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_save"
        android:orderInCategory="1"
        android:title="@string/menu_save"
        app:showAsAction="ifRoom"/>
    
    <item
        android:id="@+id/menu_favorite"
        android:orderInCategory="1"
        android:icon="@drawable/favorite"
        android:title="@string/menu_favorite"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_reading_option"
        android:orderInCategory="1"
        android:icon="@drawable/ic_visibility_white_24dp"
        android:title="@string/menu_reading_option"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_share"
        android:orderInCategory="1"
        android:title="@string/menu_share"
        app:showAsAction="ifRoom"
        android:icon="@drawable/facebook_box_blue"
        />

</menu>