<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/delete"
        android:orderInCategory="1"
        android:title="@string/menu_delete"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/menu_note"
        android:orderInCategory="100"
        android:title="@string/menu_note"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/menu_reading_option"
        android:icon="@drawable/ic_visibility_white_24dp"
        android:orderInCategory="1"
        android:title="@string/menu_reading_option"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/facebook_box_blue"
        android:orderInCategory="1"
        android:title="@string/menu_share"
        app:showAsAction="ifRoom|withText" />

</menu>