<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_page_grid_item_selector"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/recipeThumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/main_page_icon_descp" />

    <TextView
        android:id="@+id/recipeTitle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="1dp"
        android:gravity="start"
        android:lines="1"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:paddingEnd="2dp"
        android:paddingStart="2dp"
        android:textColor="#9C27B0"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/recipeCategoryTitle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="start"
        android:paddingEnd="2dp"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:paddingStart="2dp"
        android:textColor="#E1BEE7"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/saveGridButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:contentDescription="save button on main grid"
            android:src="@drawable/ic_file_download_black_24dp"
            android:text="@string/recipe_save" />

        <ImageButton
            android:id="@+id/favoriteGridButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:contentDescription="favorite button on main grid"
            android:src="@drawable/ic_favorite_black_24dp"
            android:text="@string/menu_favorite" />
    </LinearLayout>

</LinearLayout>